fix: Fix overflow content in Header for better responsiveness

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,7 @@
 ::-webkit-scrollbar-track {
   background-color: #222; /* Dark track */
 }
+
+* {
+  outline: 1px solid red;
+}
